# ssibal

./: README.md  pyproject.toml  run_cli.bat  run_ui.bat
logs/verification/: VERIFICATION_SUMMARY.md
n8n/: Dockerfile.streamlit  docker-compose.yml
n8n/config/: categories.json  schedules.json
n8n/server/: Dockerfile  app.py  db.py  requirements.txt
n8n/server/crawlers/: __init__.py  base.py  coupang.py  gmarket.py  naver.py
n8n/workflows/: 01_main_scheduler.json  02_category_crawler.json  03_search_api.json
scripts/: validate_demo_run.py
scripts/windows/: TROUBLESHOOTING.md  create_shortcuts.ps1  one_time_setup_and_run.ps1
src/: main.py
src/adapters/: base.py  coupang.py  demo.py  generic_playwright.py  naver_smartstore.py
src/core/: models.py  pipeline.py  report.py  similarity.py  storage.py  verify.py
src/ui/: app.py  config_store.py  n8n_dashboard.py
tests/: test_smoke.py
