[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sachyo"
version = "0.2.0"
description = "Image-driven KR marketplace candidate discovery and verification pipeline"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "Pillow>=10.4.0",
  "imagehash>=4.3.1",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  "playwright>=1.48.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.37.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
